// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BodyCopy /> renders base component correctly 1`] = `
<article
  className="base dark"
  id="Anti-Oxidant"
>
  <header
    className="base"
    id="Anti-Oxidant"
  >
    <h2
      className="base mediumWeightFont xXSmall dark eyebrow"
    >
      Recommended Nearby
    </h2>
    <h3
      className="base xLarge dark heading"
    >
      Aesop & The Paris Review: A Partnership Extended
    </h3>
    <h4
      className="base mediumWeightFont xSmall dark subHeading"
    >
      Active Nutrients
    </h4>
  </header>
  <div
    className="copy"
  >
    Parsley Seed Cream. [The Paris Review](http://theparisreview.org) Intensely soothing, nourishing and hydrating, this elegant formulation contains a potent blend of botanicals that offer fortification of the highest order against free radicals.
  </div>
  <div
    className="base flush ctaWrapper"
  >
    <a
      className="base blockStyle hasIcon center dark  link flushLink center"
      href="/"
      target="_self"
    >
      Nullam id erat est
       
      <i
        aria-hidden="true"
        className="icon"
      >
        <svg
          className="base rightUpArrow dark"
          data-ref=""
          focusable="false"
          height={15}
          role="img"
          style={
            Object {
              "height": "15px",
              "width": "15px",
            }
          }
          tabIndex={-1}
          viewBox="0 0 50 50"
          width={15}
        >
          <g>
            <path
              d="M21.8,0.2l28.1-0.1v28.1l-4.5,0l0.1-20.5L16.2,37.1l-3.4-3.4L42.1,4.4L21.8,4.4L21.8,0.2L21.8,0.2z"
            />
          </g>
        </svg>
      </i>
    </a>
  </div>
</article>
`;

exports[`<BodyCopy /> renders promary title as an \`h2\` if no \`eyebrow\` or \`primaryTitle\` prop are passed 1`] = `
<article
  className="base dark"
>
  <header
    className="base"
  >
    <h2
      className="base mediumWeightFont xSmall dark subHeading"
    >
      Aesop & The Paris Review: A Partnership Extended
    </h2>
  </header>
  <div
    className="base flush ctaWrapper"
  />
</article>
`;

exports[`<BodyCopy /> renders promary title as an \`h2\` if no \`eyebrow\` prop is passed 1`] = `
<article
  className="base dark"
>
  <header
    className="base"
  >
    <h2
      className="base xLarge dark heading"
    >
      Aesop & The Paris Review: A Partnership Extended
    </h2>
  </header>
  <div
    className="base flush ctaWrapper"
  />
</article>
`;
